--- a/modules.yaml
+++ b/modules.yaml
@@ -3,23 +3,24 @@ modules:
     - lmod
   lmod:
     core_compilers:
-      - 'gcc@4.8.5'
-      - 'gcc@4.8.2'
-      - 'gcc@4.8'
+#      - 'gcc@4.8.5'
+#      - 'gcc@4.8.2'
+#      - 'gcc@4.8'
+      - 'gcc@8.3'
     # hash_length: 0
     whitelist:
       - gcc
-    blacklist:
-      - '%gcc@4.8.2'
-      - '%gcc@4.8.5'
-      - '%gcc@4.8'
+#    blacklist:
+#      - '%gcc@4.8.2'
+#      - '%gcc@4.8.5'
+#      - '%gcc@4.8'
     verbose_autoload: false
     all:
       autoload: 'direct'
       suffixes:
         '+jit': jit
         '^python@2.7': 'py2.7'
-        '^python@3.6': 'py3.6'
+        '^python@3.8': 'py3.8'
       environment:
         set:
           'SPACK_{name}_ROOT': '{prefix}'
