--- a/packages.yaml
+++ b/packages.yaml
@@ -1,60 +1,42 @@
 packages:
   all:
-    compiler: [gcc@8.2.0, gcc@4.8.5, gcc@4.8.3]
-  bamutil:
-    version: [1.0.13]
+    compiler: [gcc@8.4.0]
   bcftools:
-    version: [1.9]
-  bedops:
-    version: [2.4.35]
+    version: [1.10.2]
   bedtools2:
-    version: [2.27.1]
+    version: [2.29.2]
   blast-plus:
     version: [2.9.0]
     variants: ~python~perl
-  bowtie:
-    version: [1.2.3]
   bowtie2:
-    version: [2.3.5.1]
+    version: [2.4.2]
   bwa:
     version: [0.7.17]
   cairo:
-    variants: +X+pdf
-  cdhit:
-    version: [4.6.8]
+    variants: -X+pdf
   clapack:
     variants: ~external-blas
-  datamash:
-    version: [1.3]
   emacs:
-    version: [26.3]
+    version: [27.1]
     variants: +tls
   emboss:
     version: [6.6.0]
   fastx-toolkit:
     version: [0.0.14]
-  mafft:
-    version: [7.221]
-  muscle:
-    version: [3.8.1551]
-  pango:
-    variants: +X
   pcre:
     variants: +jit
   perl:
-    version: [5.26.2]
+    version: [5.33.3]
   python:
-    version: [3.8.2]
+    version: [3.8.6]
   r:
-    version: [3.6.3]
-    variants: +X
+    version: [4.0.3]
+    variants: -X
   samtools:
     version: [1.10]
   seqtk:
     version: [1.3]
-  spades:
-    version: [3.13.0]
   star:
-    version: [2.7.0e]
+    version: [2.7.6a]
   tabix:
     version: ["2013-12-16"]
